--- a/dev/new.css
+++ b/dev/new.css
@@ -1,18 +1,44 @@
 
+.trumbowyg-box,
+.trumbowyg-editor {
+    min-height: unset!important;
+}
+
+.trumbowyg-editor, 
+.trumbowyg-textarea {
+    min-height: 400px!important;
+    resize: vertical!important;	
+}
+
+.dark-mode .trumbowyg  {
+  border: 1px solid white;
+}
+
+.dark-mode .trumbowyg {
+  box-shadow: var(--box-shadow);
+  background: var(--custom-dark);
+}
+
+.trumbowyg-button-pane {
+  box-shadow: var(--box-shadow);
+}
+
 .footnote {
   margin-bottom: 2px;
 }
 
 .articleEditor {
-  border: 2px solid black;
+  border: 2px solid var(--bs-dark);
   max-width: 680px;
   
   margin-top: 10px;
   margin-bottom: 10px;
   margin-left: auto;
   margin-right: auto;
-  
-  text-height: 1.25em;
+}
+
+.dark-mode .articleEditor {
+  background: var(--bs-dark);
 }
 
 .text-box {
@@ -45,10 +71,6 @@
 .footing textarea {
   width: 100%;
   min-height: 100px;
-}
-
-.tagsTextBox textarea {
-
 }
 
 .descriptionTextBox {
