--- a/templates/plain.html
+++ b/templates/plain.html
@@ -1,16 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="UTF-8">
     <title>Nick's Playground - Untitled</title>
-    <base href="">
+    <link rel="shortcut icon" href="/icons/apple-icon-180.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Blog, unknown">
+
+    <link rel="apple-touch-icon" href="/icons/apple-icon-180.png">
+
+    <meta name="theme-color" media="(prefers-color-scheme: light)" content="white">
+    <meta name="theme-color" media="(prefers-color-scheme: dark)"  content="black">
+
+    <link rel="manifest" href="/manifest.json">
 
     <!-- import jquery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!-- import all core scripts, including includeFile -->
-    <script src="src/main.js"></script>
+    <script src="/src/main.js"></script>
     
-    <script>includeFile("dependencies.php", "dependencies", "script", "head") </script>
+    <script>includeFile("/dependencies.php", "dependencies", "script", "head") </script>
 
     <!-- import file specific scripts -->
     <script> </script>
@@ -20,8 +29,13 @@
 
   </head>
   <body>
-    
-    <script>includeFile("pieces/header.php", "header")</script>
+
+    <script>
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('/service-worker.js');
+    }
+    </script>
+    <script>includeFile("/pieces/header.php", "header")</script>
 
     <div class="main-content mode-box-shadow">
       
@@ -34,7 +48,7 @@
       
     </div>
 
-    <script>includeFile("pieces/footer.php", "footer")</script>
+    <script>includeFile("/pieces/footer.php", "footer")</script>
 
   </body>
   <style>
